vlib/v/checker/tests/if_expr_optional_err.out
vlib/v/checker/tests/if_expr_optional_err.vv:7:5: error: non-bool type `?bool` used as if condition
    5 | fn main() {
    6 | 
    7 |     if get_bool() {
      |        ~~~~~~~~~~
    8 |         println("Using plain lists")
    9 |     }
